<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/widget35"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:id="@+id/widget36"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:text="@string/poidsLabel" />
    <EditText
            android:id="@+id/widget37"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/poidsHint"
            android:enabled="true"
            android:inputType="phone"
            android:numeric="decimal"
            android:textSize="18sp" />
    <TextView
            android:id="@+id/widget38"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:text="@string/tailleLabel" />
    <EditText
            android:id="@+id/widget39"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tailleHint"
            android:inputType="phone"
            android:numeric="decimal"
            android:enabled="true"
            android:textSize="18sp" />
    <RadioGroup
            android:id="@+id/widget40"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <RadioButton
                android:id="@+id/widget41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/metreLabel" />
        <RadioButton
                android:id="@+id/widget42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/cmLabel" />
    </RadioGroup>
    <Button
            android:id="@+id/widget44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/calculText" />
    <Button
            android:id="@+id/widget45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/razText" />
    <TextView
            android:id="@+id/widget47"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/noResText" />
</LinearLayout>
